	Fix check_ldap overriding the port when --ssl was specified after -p
	Fix check_procs where regex input of '|' would get displayed in output - now replaced with ','
	Fix segfault in check_host when hostname returns multiple IP addresses (Sebastian Harl)
	Fix check_smtp and check_tcp where duplicate messages were displayed for certificate errors
	Disable RFC4507 support, to work around SSL negotiation issues with (at least) some Tomcat versions

1.4.15 27th July 2010
	ENHANCEMENTS
	New check_ntp_peer -m and -n options to check the number of usable time sources ("truechimers")
	New check_disk_smb -a option which allows for specifying the IP address of the remote server
	New check_radius -N option which allows for specifying the value of the NAS-IP-Address attribute
	New check_snmp --rate option to store differences between invocations. Saves state in PREFIX/var/{plugin}
	check_snmp -l label option now also changes the perfdata label. See WARNINGS
	check_snmp has an --invert-search option which reverses status of the string and regexp searches
	check_http now displays the missing search string and the URL in the output when failed (Duncan Ferguson - #2999924)
	Updated Nagios::Plugin perl module
	Updated gnulib to June 2010

	FIXES
	Fix check_ircd binding to wrong interface (#668778)
	Add proxy-authorization option to check_http (Marcel Kuiper - #1323230, Bryan Irvine - #2863925)
	check_icmp now increment the sequence counter in each packet
	Fix usage of repeated -o options in check_snmp
	Try to detect arguments passed via --with-ping[6]-command and set options accordingly (#2908236)
	Fix memory leak in check_http for large pages (Jimmy Bergman - #2957455)
	Fix compilation with GCC 2.96 (Konstantin Khomoutov - #2977105)
	Fix regression introduced in #1867716 where partially valid performance strings would not be printed anymore
	Fix regression in check_http ssl checks on some servers - make SNI an option
	Fix guest mode support in check_disk_smb