@@ -23,6 +23,7 @@ This file documents the major additions and syntax changes between releases.
 	Fix check_procs where regex input of '|' would get displayed in output - now replaced with ','
 	Fix segfault in check_host when hostname returns multiple IP addresses (Sebastian Harl)
 	Fix check_smtp and check_tcp where duplicate messages were displayed for certificate errors
+	Fix check_ping's parsing of the output of Debian's ping6(1) implementation (#1894850 - Matej Vela)
 	Disable RFC4507 support, to work around SSL negotiation issues with (at least) some Tomcat versions
 
 1.4.15 27th July 2010
